changes in file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>hello github</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum suscipit quo accusamus perferendis at nobis sunt ducimus perspiciatis excepturi incidunt aspernatur dolorem, possimus, corporis architecto distinctio dolore magni quae hic.</p>
-    
+    <button>click me</button>
 </body>
 </html>
